--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
   <body>
     <form id="quizForm" action="/" method="post" target="_self">
       <header>
-        <progress max="10" value="0" id="progressBar"></progress>
+        <progress max="10" value="2" id="progressBar"></progress>
         <span data-icon="⏱️">15</span>
         <span data-icon="🌟">988</span>
       </header>
@@ -21,20 +21,22 @@
         <fieldset>
           <legend>
             <h1><%= title %></h1>
-            <h3><%= subtitle %></h3>
+            <h2><%= subtitle %></h2>
           </legend>
         </fieldset>
         <% for (let i = 0; i < questions.length; i++) { %>
         <fieldset>
           <legend><%= questions[i].question %></legend>
           <% for (let j = 0; j < questions[i].options.length; j++) { %>
-          <label for="answer<%= i %>-<%= j %>">
+            <% const questionId = questions[i].question.toLowerCase().replace(/[^_\w]+/g, '_').replace(/^_+|_+$/g, ''); %>
+            <% const optionId = questions[i].options[j].toLowerCase().replace(/[^_\w]+/g, '_').replace(/^_+|_+$/g, ''); %>
+          <label for="<%= questions[i].question.replace(/ /g, '_') %>-<%= questions[i].options[j].replace(/ /g, '_') %>">
             <%= questions[i].options[j] %>
             <input
               type="radio"
-              name="answer<%= i %>"
-              value="<%= questions[i].options[j] %>"
-              id="answer<%= i %>-<%= j %>"
+              name="<%= questionId %>"
+              value="<%= optionId %>"
+              id="<%= questionId %>-<%= optionId %>"
               required
             />
           </label>
